# good_habits

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
habit/: admin.py  apiviews.py  constants.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py
habit/migrations/: 0001_initial.py  0002_alter_habit_associated_habit_alter_habit_good_habit_and_more.py
prize/: admin.py  apiviews.py  apps.py  models.py  paginators.py  serializers.py  tests.py  urls.py
prize/migrations/: 0001_initial.py  0002_alter_prize_user.py
users/: admin.py  apiviews.py  models.py  serializers.py  tests.py  urls.py
users/migrations/: 0001_initial.py  0002_user_tg_id_user_tg_name.py  0003_alter_user_tg_id.py
